# backend/server.js
@@ -11,6 +11,7 @@ import MockTestRoutes from './Routes/api/PractiseTest.Routes.js'
 import TerminologyRoutes from './Routes/api/terminology.Routes.js'
 import OneLiners from './Routes/api/oneLiner.Routes.js'
 import SuperCategory from './Routes/api/superCategory.Routes.js'
+import LanguageRoutes from './Routes/api/language.Routes.js'
 
 import { createRequire } from "module";
 const require = createRequire(import.meta.url); // construct the require method
@@ -39,7 +40,7 @@ app.use('/api/mock-test',MockTestRoutes)
 app.use('/api/terminology',TerminologyRoutes)
 app.use('/api/one-liners',OneLiners)
 app.use('/api/supercategories',SuperCategory)
-
+app.use('/api/language',LanguageRoutes)
 
 app.get('/get',async(req,res)=>{
     const {data}=await Axios.get('https://script.googleusercontent.com/macros/echo?user_content_key=6UTQpnRJNRwlU-XnzU3LQFhumGx9UQPStT93MHwmXmxIhRalYGP4Z2c4Rw2HWR1WeAeqMvPhyxt41TCU0Z7DvQjnSM07LOdFm5_BxDlH2jW0nuo2oDemN9CCS2h10ox_1xSncGQajx_ryfhECjZEnH810grv4XdUG_LwF2eyuMa5ufkfaA__S5UK4miFUlt12chAkuCJLDM1zrPx1aiUl95iAjojgKbQq7vfscZ4onCrcFK6sgX0iw&lib=Ms-_GpD7w53h-KAzT1xgMOxu7vu5ZmFTa')
